@@ -1,5 +1,8 @@
 ???? 1.2.?.?
 
+    user visible changes client:
+    * Allow multiple guids per IID
+
     programmer visible changes:
     * removed readline and colorama from test_import - they are needed only for interactive mode and should not create an error on compilation.
 
